--- a/D_Centrality_histogram_Value.ipynb
+++ b/D_Centrality_histogram_Value.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "80194960-6df0-4750-8584-e36933865315",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -32,7 +22,10 @@
     "folder_path = 'output/Denso'\n",
     "\n",
     "# フォルダ内のCSVファイルを全て取得\n",
-    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170643_Centrality_350.csv')]\n",
+    "#csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170643_Centrality_350.csv')]\n",
+    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241011-101723_Centrality_1000.csv')]\n",
+    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170504_Centrality_350.csv')] #Management\n",
+    "\n",
     "\n",
     "# 各CSVファイルを処理\n",
     "for file in csv_files:\n",
@@ -116,7 +109,7 @@
     "\n",
     "# リストからヒストグラムのデータフレームを作成\n",
     "histogram_df = pd.DataFrame(histogram_data)\n",
-    "print(histogram_df)\n",
+    "#print(histogram_df)\n",
     "\n",
     "# Define columns that would be in the pivoted DataFrame\n",
     "pivot_columns = [\n",
@@ -146,7 +139,9 @@
     "    ).reset_index()\n",
     "\n",
     "# ヒストグラムの結果をCSVファイルに保存\n",
-    "pivoted_histogram_df.to_csv('output/Denso/centrality_histogram_Value.csv', index=False, encoding='utf-8-sig')\n"
+    "#pivoted_histogram_df.to_csv('output/Denso/D_centrality_histogram_Value.csv', index=False, encoding='utf-8-sig')\n",
+    "pivoted_histogram_df.to_csv('output/Denso/D_centrality_histogram_Management.csv', index=False, encoding='utf-8-sig')\n",
+    "\n"
    ]
   },
   {
