--- a/D_Word_ranking.ipynb
+++ b/D_Word_ranking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "38aca94a-8a31-4e61-8633-d8cf1f3bb62f",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "処理が完了しました。結果はaggregated_rank_results_value.csvとhistogram_results_value.csvに保存されました。\n"
+      "処理が完了しました。結果はaggregated_rank_results_***.csvとhistogram_results_***.csvに保存されました。\n"
      ]
     }
    ],
@@ -24,7 +24,10 @@
     "\n",
     "# 2. \"_Word_list.csv\"ファイルを読み込む\n",
     "file_path = 'output/Denso/'#Value/Word_list'  # フォルダのパスを指定してください\n",
-    "word_list_files = glob.glob(f\"{file_path}/*20241008-170643_Word_list.csv\")\n",
+    "#word_list_files = glob.glob(f\"{file_path}/*20241008-170643_Word_list.csv\") #Value\n",
+    "#word_list_files = glob.glob(f\"{file_path}/*69020_デンソー_20241008-170504_Word_list.csv\") #Management\n",
+    "word_list_files = glob.glob(f\"{file_path}/*69020_デンソー_20241008-170737_Word_list.csv\") #IP\n",
+    "\n",
     "\n",
     "# Keyword1.csvを読み込む\n",
     "keyword_df = pd.read_csv('output/Denso/Keywords1.csv', header=None)\n",
@@ -75,15 +78,18 @@
     "final_df = pd.concat(results)\n",
     "\n",
     "# 結果をCSVに出力\n",
-    "final_df.to_csv('output/Denso/D_aggregated_rank_results_value.csv', index=False, encoding='utf-8-sig')\n",
+    "#final_df.to_csv('output/Denso/D_aggregated_rank_results_value.csv', index=False, encoding='utf-8-sig')\n",
+    "final_df.to_csv('output/Denso/D_aggregated_rank_results_Management.csv', index=False, encoding='utf-8-sig')\n",
+    "final_df.to_csv('output/Denso/D_aggregated_rank_results_IP.csv', index=False, encoding='utf-8-sig')\n",
     "\n",
     "# ヒストグラム結果をデータフレームにまとめる\n",
     "histogram_df = pd.DataFrame(histogram_results)\n",
     "\n",
     "# ヒストグラム結果をCSVに出力\n",
-    "histogram_df.to_csv('output/Denso/D_histogram_results_value.csv', index=False, encoding='utf-8-sig')\n",
-    "\n",
-    "print(\"処理が完了しました。結果はaggregated_rank_results_value.csvとhistogram_results_value.csvに保存されました。\")\n"
+    "#histogram_df.to_csv('output/Denso/D_histogram_results_value.csv', index=False, encoding='utf-8-sig')\n",
+    "#histogram_df.to_csv('output/Denso/D_histogram_results_Management.csv', index=False, encoding='utf-8-sig')\n",
+    "histogram_df.to_csv('output/Denso/D_histogram_results_IP.csv', index=False, encoding='utf-8-sig')\n",
+    "print(\"処理が完了しました。結果はaggregated_rank_results_***.csvとhistogram_results_***.csvに保存されました。\")\n"
    ]
   },
   {
