--- a/D_tf-idf_Value.ipynb
+++ b/D_tf-idf_Value.ipynb
@@ -5,15 +5,7 @@
    "execution_count": 1,
    "id": "33c02808-6ad8-4bbf-8792-7019776b6c75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['69020_デンソー_20241008-170643_Token.csv', '34070_旭化成_20240604-210000_Token.csv', '63700_栗田工業_20240605-031503_Token.csv', '66450_オムロン_20240605-031945_Token.csv', '77350_ＳＣＲＥＥＮホールディングス_20240605-033205_Token.csv', '67010_日本電気_20240605-032157_Token.csv', '53340_日本特殊陶業_20240605-030939_Token.csv', '57110_三菱マテリアル_20240605-031122_Token.csv', '68100_マクセル_20240605-032731_Token.csv', '40210_日産化学_20240604-212310_Token.csv', '45280_小野薬品工業_20240605-030108_Token.csv']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#各社のTokenファイルを読み込み、データフレームに格納\n",
     "import pandas as pd\n",
@@ -27,8 +19,8 @@
     "\n",
     "# 読み込むcsvファイル名を記載したリストファイル指定\n",
     "filename=\"token_list.txt\"\n",
-    "\n",
-    "list_file= \"output/Denso/tf-idf/\" + filename\n",
+    "#filename=\"token_list2.txt\"\n",
+    "list_file= \"output/IP/tf-idf/\" + filename\n",
     "\n",
     "# リストに格納\n",
     "with open(list_file, \"r\") as file:\n",
@@ -37,11 +29,9 @@
     "    # 改行文字を削除してクリーンアップ\n",
     "    csv_files = [line.strip() for line in lines]\n",
     "\n",
-    "print(csv_files)\n",
-    "\n",
     "# 空のリストに各CSVファイルから読み込んだデータフレームを格納\n",
     "dataframes = []\n",
-    "file_folder='output/Denso/tf-idf/'\n",
+    "file_folder='output/IP/tf-idf/'\n",
     "\n",
     "# CSVファイルをループして読み込む\n",
     "for file in csv_files:\n",
@@ -116,17 +106,9 @@
     "date_time_string = now.strftime(\"%Y%m%d_%H%M%S\")\n",
     "\n",
     "#ファイル出力\n",
-    "file_name_tfidf = f\"output/Denso/tf-idf/{date_time_string}_tf-idf.csv\"\n",
+    "file_name_tfidf = f\"output/IP/tf-idf/{date_time_string}_tf-idf.csv\"\n",
     "df_combined.to_csv(file_name_tfidf, encoding=\"utf_8_sig\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "394a04c2-ff42-4bf5-84f7-dd9889ff0671",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
