--- a/ターゲット共起抽出_20241010.ipynb
+++ b/ターゲット共起抽出_20241010.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "2d7bf95a-e426-4cf9-9d1f-2d40d3ab9ab3",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            1番目   2番目  count\n",
-      "2757       ROIC   新製品      3\n",
-      "14811  ステークホルダー  技術戦略      1\n",
-      "14919  ステークホルダー  技術革新      1\n"
+      "      1番目  2番目  count\n",
+      "5186  収益性  成長性      1\n"
      ]
     }
    ],
@@ -27,9 +25,10 @@
     "keywords1 ='Keywords1.csv'\n",
     "keywords2 ='Keywords2.csv'\n",
     "\n",
-    "#target_file ='69020_デンソー_20241008-170643_Co_Occurrence.csv'#Value\n",
-    "target_file ='69020_デンソー_20241008-170737_Co_Occurrence.csv'#IP\n",
-    "#target_file ='69020_デンソー_20241008-170504_Co_Occurrence.csv'#Management\n",
+    "#target_file ='69020_デンソー_20241008-170643_Co_Occurrence.csv'#Value n=350\n",
+    "#target_file ='69020_デンソー_20241008-170737_Co_Occurrence.csv'#IP\n",
+    "target_file ='69020_デンソー_20241008-170504_Co_Occurrence.csv'#Management\n",
+    "#target_file ='69020_デンソー_20241011-101723_Co_Occurrence.csv'#Value n=800\n",
     "\n",
     "filename = target_folder + target_file\n",
     "ourput_filename = target_folder +target_file.replace('.csv','') +'_filtered.csv'\n",
