--- a/D_Rank_Centrality_Value.ipynb
+++ b/D_Rank_Centrality_Value.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "a0d43a9d-a412-467a-8362-251afc9ad987",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,11 @@
     "folder_path = 'output/Denso/'\n",
     "\n",
     "# フォルダ内のCSVファイルを全て取得\n",
-    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170643_Centrality_350.csv')]\n",
+    "#csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170643_Centrality_350.csv')]\n",
+    "#csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241011-101723_Centrality_800.csv')]\n",
+    "#csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241011-101723_Centrality_1000.csv')]\n",
+    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170504_Centrality_350.csv')] #Management\n",
+    "\n",
     "#print(csv_files)\n",
     "\n",
     "# 各CSVファイルを処理\n",
@@ -71,7 +75,10 @@
     "])\n",
     "\n",
     "# 結果をCSVファイルに保存\n",
-    "output_df.to_csv('output/Denso/aggregated_centralities_value.csv', index=False, encoding='utf-8-sig')\n"
+    "#output_df.to_csv('output/Denso/D_aggregated_centralities_value_350.csv', index=False, encoding='utf-8-sig')\n",
+    "#output_df.to_csv('output/Denso/D_aggregated_centralities_value_800.csv', index=False, encoding='utf-8-sig')\n",
+    "#output_df.to_csv('output/Denso/D_aggregated_centralities_value_1000.csv', index=False, encoding='utf-8-sig')\n",
+    "output_df.to_csv('output/Denso/D_aggregated_centralities_Management_350.csv', index=False, encoding='utf-8-sig')\n"
    ]
   },
   {
