--- a/D_Centrality_histogram_Value.ipynb
+++ b/D_Centrality_histogram_Value.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "80194960-6df0-4750-8584-e36933865315",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "#csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170643_Centrality_350.csv')]\n",
     "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241011-101723_Centrality_1000.csv')]\n",
     "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241008-170504_Centrality_350.csv')] #Management\n",
-    "\n",
+    "csv_files = [f for f in os.listdir(folder_path) if f.endswith('69020_デンソー_20241016-144426_Centrality_350.csv')] #Management\n",
     "\n",
     "# 各CSVファイルを処理\n",
     "for file in csv_files:\n",
