--- a/ターゲット共起抽出_20241010.ipynb
+++ b/ターゲット共起抽出_20241010.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2d7bf95a-e426-4cf9-9d1f-2d40d3ab9ab3",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "      1番目  2番目  count\n",
-      "5186  収益性  成長性      1\n"
+      "589  ROIC  新製品      1\n"
      ]
     }
    ],
@@ -21,14 +21,22 @@
     "#import re\n",
     "\n",
     "# Load CSV files into pandas DataFrames\n",
-    "target_folder ='output/Denso/'\n",
+    "#target_folder ='output/Denso/'\n",
+    "target_folder ='output/'\n",
+    "\n",
     "keywords1 ='Keywords1.csv'\n",
     "keywords2 ='Keywords2.csv'\n",
     "\n",
     "#target_file ='69020_デンソー_20241008-170643_Co_Occurrence.csv'#Value n=350\n",
     "#target_file ='69020_デンソー_20241008-170737_Co_Occurrence.csv'#IP\n",
-    "target_file ='69020_デンソー_20241008-170504_Co_Occurrence.csv'#Management\n",
+    "#target_file ='69020_デンソー_20241008-170504_Co_Occurrence.csv'#Management\n",
     "#target_file ='69020_デンソー_20241011-101723_Co_Occurrence.csv'#Value n=800\n",
+    "#target_file ='__20241111-151605_Co_Occurrence.csv'#オリジナル\n",
+    "#target_file ='__20241111-153314_Co_Occurrence.csv'#参考案\n",
+    "#target_file ='__20241111-153529_Co_Occurrence.csv'#参考案2\n",
+    "target_file ='__20241111-154250_Co_Occurrence.csv'#参考案old\n",
+    "\n",
+    "\n",
     "\n",
     "filename = target_folder + target_file\n",
     "ourput_filename = target_folder +target_file.replace('.csv','') +'_filtered.csv'\n",
