--- a/Pdf_to_Cleaned_Text.ipynb
+++ b/Pdf_to_Cleaned_Text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "407e9b2e-6eb2-4bcd-b269-02cc41c7af15",
    "metadata": {},
    "outputs": [
@@ -10,40 +10,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ファイルが保存されました: ir/2025/34070_旭化成/cleaned_extracted_text_by_attributes.txt\n"
+      "ファイルが保存されました: ir/2025/34070_旭化成/24jp.txt\n"
      ]
     }
    ],
    "source": [
     "#テキストの属性をもとに段落を判別しつつテキストデータを取得\n",
-    "\n",
     "import fitz  # PyMuPDF\n",
     "import re\n",
     "\n",
-    "# PDFファイルのパス\n",
-    "pdf_path = \"ir/2025/34070_旭化成/24jp.pdf\"\n",
-    "\n",
     "# テキストクリーニング関数\n",
-    "def clean_text_by_attributes(page):\n",
+    "def clean_text_by_attributes(page, header_y=None, footer_y=None, left_margin_x=None, right_margin_x=None):\n",
     "    text = \"\"\n",
     "    blocks = page.get_text(\"dict\")[\"blocks\"]\n",
     "    previous_font = None\n",
     "    previous_size = None\n",
     "    previous_color = None\n",
     "    previous_bbox = None\n",
-    "    #previous_width = None\n",
     "    previous_text_type = None\n",
     "\n",
     "    def get_threshold_by_font_size(font_size):\n",
     "        # フォントサイズによって閾値を動的に変更\n",
-    "        #if font_size <= 10:\n",
-    "        #    return 10  # 小さいフォントサイズ\n",
-    "        #elif font_size <= 14:\n",
-    "        #    return 14  # 中程度のフォントサイズ\n",
-    "        #else:\n",
-    "        #    return 24  # 大きいフォントサイズ\n",
-    "        return font_size * 2\n",
-    "    \n",
+    "        return font_size * 2.2\n",
+    "\n",
     "    for block in blocks:\n",
     "        if \"lines\" not in block:\n",
     "            continue\n",
@@ -52,46 +41,83 @@
     "                font = span[\"font\"]\n",
     "                size = span[\"size\"]\n",
     "                color = span[\"color\"]\n",
-    "                bbox = span[\"bbox\"]\n",
-    "                #width = span[\"width\"]\n",
+    "                bbox = span[\"bbox\"]  # [x0, y0, x1, y1]\n",
     "                text_type = span.get(\"text_type\", \"text\")  # デフォルトで\"text\"\n",
     "                content = span[\"text\"]\n",
+    "\n",
+    "                # テキスト位置によるフィルタリング\n",
+    "                if bbox[3] is not None and  bbox[3] < header_y:  # ヘッダ・フッタの除外\n",
+    "                    #ヘッダ領域：bbox[3]: 下端のY座標 (y1) < header_y\n",
+    "                    continue\n",
+    "                if bbox[1] is not None and bbox[1] > footer_y:  # ヘッダ・フッタの除外\n",
+    "                    #フッタ領域：bbox[1]: 上端のY座標 (y0) > footer_y\n",
+    "                    continue\n",
+    "                if bbox[2] is not None and bbox[2] < left_margin_x:  # 左右マージンの除外\n",
+    "                    #レフトマージン領域：bbox[2]: 右端のX座標 (x1) < left_margin_x\n",
+    "                    continue\n",
+    "                if bbox[0] is not None and bbox[0] > right_margin_x:  # 左右マージンの除外\n",
+    "                    #ライトマージン領域：bbox[0]: 左端のX座標 (x0) > right_margin_x\n",
+    "                    continue\n",
     "\n",
     "                # \\nの直前にある半角スペースを除外\n",
     "                content = re.sub(r\" \\n\", \"\\n\", content)\n",
     "                content = re.sub(r\"^ \", \"\", content)\n",
     "\n",
     "                threshold = get_threshold_by_font_size(size)  # フォントサイズに基づく閾値\n",
-    "                \n",
+    "\n",
     "                # フォント、サイズ、色、位置、幅、タイプのいずれかが変化した場合は段落の区切りと見なす\n",
     "                if (\n",
-    "                    #previous_font != font or\n",
-    "                    #previous_size != size or\n",
-    "                    #previous_color != color or\n",
     "                    (previous_bbox and abs(bbox[3] - previous_bbox[3]) > threshold) or  # 縦位置の大きな変化\n",
-    "                    #previous_width != width or\n",
-    "                    previous_text_type != text_type #or\n",
-    "                    #content != \"\\n\"\n",
-    "                    \n",
+    "                    previous_text_type != text_type\n",
     "                ):\n",
     "                    text += \"\\n\\n\"  # 新しい段落の開始\n",
     "                else:\n",
-    "                    text += \"■\"  # 同じ段落と見なしてスペースで連結\n",
+    "                    text += \"\"  # 同じ段落と見なして連結\n",
+    "                    #text += \"■\"  # 連結位置確認用\n",
     "\n",
     "                text += content\n",
     "                previous_font = font\n",
     "                previous_size = size\n",
     "                previous_color = color\n",
     "                previous_bbox = bbox\n",
-    "                #previous_width = width\n",
     "                previous_text_type = text_type\n",
     "\n",
     "    # 最終的な改行の調整\n",
     "    text = re.sub(r\"\\n{3,}\", \"\\n\\n\", text).strip()\n",
     "    return text\n",
     "\n",
+    "\n",
+    "# PDFファイルのパス\n",
+    "base_dir = \"ir/2025/\"\n",
+    "#base_dir = \"ir/2024/\"\n",
+    "pdf_dir =  \"34070_旭化成\"\n",
+    "pdf_filename = \"24jp.pdf\"\n",
+    "#pdf_dir =  '41880_三菱ケミカルグループ'\n",
+    "#pdf_filename = \"23.pdf\"\n",
+    "\n",
+    "pdf_path = base_dir + pdf_dir + \"/\" + pdf_filename\n",
+    "\n",
     "# PDFファイルのオープン\n",
     "doc = fitz.open(pdf_path)\n",
+    "\n",
+    "# フィルタリング範囲の指定（適宜調整）\n",
+    "#旭化成\n",
+    "header_y = 37  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
+    "footer_y = None  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
+    "left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
+    "right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
+    "\n",
+    "#三菱ケミカル\n",
+    "#header_y = 24  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
+    "#footer_y = 652  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
+    "#left_margin_x = 174  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
+    "#right_margin_x = 997  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
+    "\n",
+    "#レゾナック\n",
+    "#header_y = 26  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
+    "#footer_y = 651  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
+    "#left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
+    "#right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
     "\n",
     "# PDFからテキストを抽出し、クリーニング\n",
     "cleaned_text = \"\"\n",
@@ -100,18 +126,19 @@
     "    # ページ開始タグ\n",
     "    cleaned_text += f\"<page {page_number}>\\n\"\n",
     "    # ページ内容\n",
-    "    cleaned_text += clean_text_by_attributes(page) + \"\\n\"\n",
+    "    cleaned_text += clean_text_by_attributes(page, header_y, footer_y, left_margin_x, right_margin_x) + \"\\n\"\n",
     "    # ページ終了タグ\n",
     "    cleaned_text += f\"</page {page_number}>\\n\\n\"\n",
     "\n",
     "# 出力ファイルパス\n",
-    "output_file_path = \"ir/2025/34070_旭化成/cleaned_extracted_text_by_attributes.txt\"\n",
+    "output_file_path = pdf_path[:len(pdf_path)-4] + \".txt\"\n",
     "\n",
     "# ファイルへの書き込み\n",
     "with open(output_file_path, \"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(cleaned_text)\n",
     "\n",
-    "print(f\"ファイルが保存されました: {output_file_path}\")\n"
+    "print(f\"ファイルが保存されました: {output_file_path}\")\n",
+    "\n"
    ]
   },
   {
