--- a/Pdf_to_Text_with_columns.ipynb
+++ b/Pdf_to_Text_with_columns.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "21a842c9-2ba1-41ff-83cd-be5560a4ee7c",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ファイルが保存されました: ir/2025/34070_旭化成/24jp.txt\n"
+      "ファイルが保存されました: ir/2025/40040_レゾナック・ホールディングス/pdf-sustainability-report-integratedreport-RESONAC24J_spread.txt\n"
      ]
     }
    ],
@@ -417,7 +417,7 @@
     "                        continue\n",
     "\n",
     "                    # 段落区切りの判定\n",
-    "                    threshold = size * 2.2  # フォントサイズに基づく閾値\n",
+    "                    threshold = size * 2.001  # フォントサイズに基づく閾値\n",
     "                    if (\n",
     "                        (previous_bbox and abs(bbox[3] - previous_bbox[3]) > threshold) or  # 縦位置の大きな変化\n",
     "                        previous_text_type != text_type\n",
@@ -450,12 +450,12 @@
     "# PDFファイルのパス\n",
     "base_dir = \"ir/2025/\"\n",
     "#base_dir = \"ir/2024/\"\n",
-    "pdf_dir =  \"34070_旭化成\"\n",
-    "pdf_filename = \"24jp.pdf\"\n",
+    "#pdf_dir =  \"34070_旭化成\"\n",
+    "#pdf_filename = \"24jp.pdf\"\n",
     "#pdf_dir =  '41880_三菱ケミカルグループ'\n",
     "#pdf_filename = \"23.pdf\"\n",
-    "#pdf_dir =  '40040_レゾナック・ホールディングス'\n",
-    "#pdf_filename = 'pdf-sustainability-report-integratedreport-RESONAC24J_spread.pdf'\n",
+    "pdf_dir =  '40040_レゾナック・ホールディングス'\n",
+    "pdf_filename = 'pdf-sustainability-report-integratedreport-RESONAC24J_spread.pdf'\n",
     "\n",
     "pdf_path = base_dir + pdf_dir + \"/\" + pdf_filename\n",
     "\n",
@@ -464,10 +464,10 @@
     "\n",
     "# フィルタリング範囲の指定（適宜調整）\n",
     "#旭化成\n",
-    "header_y = 37  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
-    "footer_y = None  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
-    "left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
-    "right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
+    "#header_y = 37  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
+    "#footer_y = None  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
+    "#left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
+    "#right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
     "\n",
     "#三菱ケミカル\n",
     "#header_y = 24  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
@@ -476,18 +476,19 @@
     "#right_margin_x = 997  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
     "\n",
     "#レゾナック\n",
-    "#header_y = 26  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
-    "#footer_y = 651  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
-    "#left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
-    "#right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
+    "header_y = 26  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
+    "footer_y = 651  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
+    "left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
+    "right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
     "\n",
     "\n",
     "# PDFからテキストを抽出し、クリーニング\n",
     "cleaned_text = \"\"\n",
     "\n",
+    "# x0 の閾値を設定\n",
+    "x0_ranges = []  \n",
     "#レゾナック\n",
-    "#x0_ranges = [62, 283, 609, 1070]  # x0 の閾値を設定\n",
-    "x0_ranges = []  # x0 の閾値を設定\n",
+    "x0_ranges =[281, 585, 828, 1070]\n",
     "\n",
     "\n",
     "for page_number, page in enumerate(doc, start=0):\n",
