--- a/Extract_Pdf_Attrib.ipynb
+++ b/Extract_Pdf_Attrib.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "556cc409-e129-497d-9477-0ca6f3c6e6a7",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "53f13eca-7ea7-4531-8c33-65c93011f462",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "17f91ba2-9a36-4889-b84f-fcb74f51fd90",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "4dca76a3-9c8c-41c1-9d66-6cdeec4e1d2e",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "b8a99f07-304b-4fa5-b7d7-4e5e66a58d7d",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "924d22d6-fbcd-4bb2-9dec-ebc8d1b4712c",
    "metadata": {},
    "outputs": [
@@ -304,16 +304,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17, 39, 43, 61, 281, 585, 590, 601, 724, 828, 1017, 1067]\n"
+      "[17, 39, 43, 61, 281, 585, 590, 601, 724, 828, 1017, 1067]\n",
+      "[43, 61, 281, 590, 601, 724, 828]\n"
      ]
     }
    ],
    "source": [
     "# 最小値を切り下げて整数にする\n",
     "rounded_min_values = np.floor(bbox_x0_groups['min']).astype(int).tolist()\n",
+    "filtered_rounded_min_values = np.floor(filtered_groups['min']).astype(int).tolist()\n",
     "\n",
     "# 結果を表示\n",
-    "print(rounded_min_values)\n"
+    "print(rounded_min_values)\n",
+    "print(filtered_rounded_min_values)"
    ]
   },
   {
