--- a/Pdf_to_Cleaned_Text.ipynb
+++ b/Pdf_to_Cleaned_Text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "407e9b2e-6eb2-4bcd-b269-02cc41c7af15",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,13 @@
    ],
    "source": [
     "#テキストの属性をもとに段落を判別しつつテキストデータを取得\n",
+    "#ヘッダ・フッタ等をテキストブロックの属性情報（特に位置情報）で除外\n",
+    "#それ以外のテキストブロックを、ブロック順に読み込み\n",
+    "#多くの場合これで対応できると思われるが、文書によっては読み込まれるブロックの順序がテキストの順序と一致しない場合あり\n",
+    "#（例えば、段組みの真ん中からテキストが読み込まれるケースなど）\n",
+    "#その場合は、Pdf_to_Text_with_columns.ipynbで取得するテキストブロックの座標（bbox）を設定し、強制的に読み込み順序を制御\n",
+    "#各ブロックの座標の分布は、Extract_Pdf_Attrib.ipynbで確認可能\n",
+    "\n",
     "import fitz  # PyMuPDF\n",
     "import re\n",
     "\n",
@@ -46,19 +53,19 @@
     "                content = span[\"text\"]\n",
     "\n",
     "                # テキスト位置によるフィルタリング\n",
-    "                if bbox[3] is not None and  bbox[3] < header_y:  # ヘッダ・フッタの除外\n",
-    "                    #ヘッダ領域：bbox[3]: 下端のY座標 (y1) < header_y\n",
+    "                if header_y is not None and bbox[3] is not None and bbox[3] < header_y:  # ヘッダ・フッタの除外\n",
+    "                #ヘッダ領域：bbox[3]: 下端のY座標 (y1) < header_y\n",
     "                    continue\n",
-    "                if bbox[1] is not None and bbox[1] > footer_y:  # ヘッダ・フッタの除外\n",
-    "                    #フッタ領域：bbox[1]: 上端のY座標 (y0) > footer_y\n",
+    "                if footer_y is not None and bbox[1] is not None and bbox[1] > footer_y:  # ヘッダ・フッタの除外\n",
+    "                #フッタ領域：bbox[1]: 上端のY座標 (y0) > footer_y\n",
     "                    continue\n",
-    "                if bbox[2] is not None and bbox[2] < left_margin_x:  # 左右マージンの除外\n",
-    "                    #レフトマージン領域：bbox[2]: 右端のX座標 (x1) < left_margin_x\n",
+    "                if left_margin_x is not None and bbox[2] is not None and bbox[2] < left_margin_x:  # 左右マージンの除外\n",
+    "                #レフトマージン領域：bbox[2]: 右端のX座標 (x1) < left_margin_x\n",
     "                    continue\n",
-    "                if bbox[0] is not None and bbox[0] > right_margin_x:  # 左右マージンの除外\n",
-    "                    #ライトマージン領域：bbox[0]: 左端のX座標 (x0) > right_margin_x\n",
+    "                if right_margin_x is not None and bbox[0] is not None and bbox[0] > right_margin_x:  # 左右マージンの除外\n",
+    "                #ライトマージン領域：bbox[0]: 左端のX座標 (x0) > right_margin_x\n",
     "                    continue\n",
-    "\n",
+    "    \n",
     "                # \\nの直前にある半角スペースを除外\n",
     "                content = re.sub(r\" \\n\", \"\\n\", content)\n",
     "                content = re.sub(r\"^ \", \"\", content)\n",
