--- a/Pdf_to_Text_with_columns.ipynb
+++ b/Pdf_to_Text_with_columns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "21a842c9-2ba1-41ff-83cd-be5560a4ee7c",
    "metadata": {},
    "outputs": [
@@ -15,6 +15,12 @@
     }
    ],
    "source": [
+    "#テキストの属性をもとに段落を判別しつつテキストデータを取得\n",
+    "#ヘッダ・フッタ等をテキストブロックの属性情報（特に位置情報）で除外\n",
+    "#テキストを取得する範囲も、テキストブロックの開始位置の座標情報をもとに、強制的に読み込み順序を制御\n",
+    "#（リスト形式で、x軸の閾値を設定：ブランクのリストであればブロックの順番通りに読み込み）\n",
+    "#各ブロックの座標の分布は、Extract_Pdf_Attrib.ipynbで確認可能\n",
+    "\n",
     "import fitz  # PyMuPDF\n",
     "import re\n",
     "\n",
@@ -139,8 +145,9 @@
     "cleaned_text = \"\"\n",
     "\n",
     "# x0 の閾値を設定\n",
-    "x0_ranges = []  \n",
+    "#x0_ranges = []  \n",
     "#レゾナック\n",
+    "x0_ranges =[585, 1070]\n",
     "#x0_ranges =[281, 585, 828, 1070]\n",
     "\n",
     "\n",
