--- a/Pdf_to_Text_with_columns.ipynb
+++ b/Pdf_to_Text_with_columns.ipynb
@@ -10,6 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "header_y: 25.98\n",
+      "footer_y: 651.85\n",
+      "left_margin_x: None\n",
+      "right_margin_x: None\n",
+      "[585.0, 1070.0]\n",
       "ファイルが保存されました: ir/2025/40040_レゾナック・ホールディングス/pdf-sustainability-report-integratedreport-RESONAC24J_spread.txt\n"
      ]
     }
@@ -20,11 +25,11 @@
     "#テキストを取得する範囲も、テキストブロックの開始位置の座標情報をもとに、強制的に読み込み順序を制御\n",
     "#（リスト形式で、x軸の閾値を設定：ブランクのリストであればブロックの順番通りに読み込み）\n",
     "#各ブロックの座標の分布は、Extract_Pdf_Attrib.ipynbで確認可能\n",
-    "\n",
     "import fitz  # PyMuPDF\n",
+    "import pandas as pd\n",
     "import re\n",
     "\n",
-    "def clean_text_by_attributes(page, header_y=None, footer_y=None, left_margin_x=None, right_margin_x=None, x0_ranges=None):\n",
+    "def clean_text_by_attributes(page, header_y=None, footer_y=None, left_margin_x=None, right_margin_x=None, column_thresholds=None):\n",
     "    text = \"\"\n",
     "    blocks = page.get_text(\"dict\")[\"blocks\"]\n",
     "\n",
@@ -36,14 +41,14 @@
     "        return len(ranges)  # 範囲外は最後の区分\n",
     "\n",
     "    # 各ブロックにLine1のbbox_x0を取得して分類\n",
-    "    sorted_blocks = {i: [] for i in range(len(x0_ranges) + 1)}  # 範囲ごとのリスト\n",
+    "    sorted_blocks = {i: [] for i in range(len(column_thresholds) + 1)}  # 範囲ごとのリスト\n",
     "    for block_index, block in enumerate(blocks):\n",
     "        if \"lines\" not in block or not block[\"lines\"]:\n",
     "            continue\n",
     "        # Line1のbbox_x0を取得\n",
     "        line1_bbox_x0 = block[\"lines\"][0][\"spans\"][0][\"bbox\"][0] if block[\"lines\"][0][\"spans\"] else None\n",
     "        if line1_bbox_x0 is not None:\n",
-    "            range_index = get_range_index(line1_bbox_x0, x0_ranges)\n",
+    "            range_index = get_range_index(line1_bbox_x0, column_thresholds)\n",
     "            sorted_blocks[range_index].append((block_index, block))  # block_indexを保持\n",
     "\n",
     "    # 各範囲ごとのブロックを番号順に処理\n",
@@ -117,11 +122,17 @@
     "pdf_filename = 'pdf-sustainability-report-integratedreport-RESONAC24J_spread.pdf'\n",
     "\n",
     "pdf_path = base_dir + pdf_dir + \"/\" + pdf_filename\n",
+    "info_path = base_dir + pdf_dir + \"/info/\"\n",
     "\n",
-    "# PDFファイルのオープン\n",
-    "doc = fitz.open(pdf_path)\n",
+    "margin_path = info_path + \"margin.csv\"\n",
+    "multicolumn_path = info_path + \"multicolumn.txt\"\n",
     "\n",
     "# フィルタリング範囲の指定（適宜調整）\n",
+    "# 初期化 (ファイルが存在しない場合もNoneになるようにする)\n",
+    "header_y = None\n",
+    "footer_y = None\n",
+    "left_margin_x = None\n",
+    "right_margin_x = None\n",
     "#旭化成\n",
     "#header_y = 37  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
     "#footer_y = None  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
@@ -135,27 +146,65 @@
     "#right_margin_x = 997  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
     "\n",
     "#レゾナック\n",
-    "header_y = 26  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
-    "footer_y = 651  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
-    "left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
-    "right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
+    "#header_y = 26  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
+    "#footer_y = 651  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
+    "#left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
+    "#right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
+    "\n",
+    "try:\n",
+    "    # margin.csvの読み込み\n",
+    "    df_margin = pd.read_csv(margin_path)\n",
+    "    \n",
+    "    # 変数への値の格納 (ブランクの場合はNoneに)\n",
+    "    header_y = df_margin.iloc[0]['header_y'] if 'header_y' in df_margin.columns and pd.notnull(df_margin.iloc[0]['header_y']) else None\n",
+    "    footer_y = df_margin.iloc[0]['footer_y'] if 'footer_y' in df_margin.columns and pd.notnull(df_margin.iloc[0]['footer_y']) else None\n",
+    "    left_margin_x = df_margin.iloc[0]['left_margin_x'] if 'left_margin_x' in df_margin.columns and pd.notnull(df_margin.iloc[0]['left_margin_x']) else None\n",
+    "    right_margin_x = df_margin.iloc[0]['right_margin_x'] if 'right_margin_x' in df_margin.columns and pd.notnull(df_margin.iloc[0]['right_margin_x']) else None\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    # ファイルが存在しない場合、全ての変数をNoneのままにする\n",
+    "    pass\n",
+    "\n",
+    "# 結果を確認\n",
+    "print(f\"header_y: {header_y}\")\n",
+    "print(f\"footer_y: {footer_y}\")\n",
+    "print(f\"left_margin_x: {left_margin_x}\")\n",
+    "print(f\"right_margin_x: {right_margin_x}\")\n",
+    "\n",
+    "#段組み情報を設定\n",
+    "# 段組みの閾値を x0 で設定\n",
+    "column_thresholds = []  \n",
+    "try:\n",
+    "    # ファイルを開いて読み込む\n",
+    "    with open(multicolumn_path, 'r', encoding='utf-8-sig') as mc_file:\n",
+    "        for line in mc_file:\n",
+    "            # 各行をカンマで分割し、数値に変換してリストに格納\n",
+    "            column_thresholds.extend([float(value) for value in line.strip().split(',') if value])\n",
+    "except FileNotFoundError:\n",
+    "    pass\n",
+    "except ValueError:\n",
+    "    print(\"multicolumn.txtに数値以外のデータが含まれています。\")\n",
+    "\n",
+    "# 結果を確認\n",
+    "print(column_thresholds)\n",
+    "\n",
+    "#レゾナック\n",
+    "#column_thresholds =[585, 1070]\n",
+    "#column_thresholds =[281, 585, 828, 1070]\n",
+    "\n",
+    "# PDFファイルのオープン\n",
+    "doc = fitz.open(pdf_path)\n",
+    "\n",
     "\n",
     "\n",
     "# PDFからテキストを抽出し、クリーニング\n",
     "cleaned_text = \"\"\n",
     "\n",
-    "# x0 の閾値を設定\n",
-    "#x0_ranges = []  \n",
-    "#レゾナック\n",
-    "x0_ranges =[585, 1070]\n",
-    "#x0_ranges =[281, 585, 828, 1070]\n",
-    "\n",
-    "\n",
     "for page_number, page in enumerate(doc, start=0):\n",
     "    # ページ開始タグ\n",
     "    cleaned_text += f\"<page {page_number}>\\n\"\n",
     "    # ページ内容（新しいx0_rangesによる処理）\n",
-    "    cleaned_text += clean_text_by_attributes(page, header_y, footer_y, left_margin_x, right_margin_x, x0_ranges=x0_ranges) + \"\\n\"\n",
+    "    cleaned_text += clean_text_by_attributes(page, header_y, footer_y, left_margin_x, right_margin_x, column_thresholds) + \"\\n\"\n",
     "    # ページ終了タグ\n",
     "    cleaned_text += f\"</page {page_number}>\\n\\n\"\n",
     "\n",
