--- a/Extract_Pdf_Attrib_from_list.ipynb
+++ b/Extract_Pdf_Attrib_from_list.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e7c40f4e-c42b-4439-a72a-80376a0dc8a9",
+   "id": "dccaaa48-aff8-4460-96e2-3dc47e8497d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,20 +21,12 @@
     "import csv\n",
     "import os\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-    "import matplotlib.pyplot as plt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c0dc431b-5872-4811-8d24-fed3444d8c0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
     "import logging\n",
     "\n",
+    "\n",
     "# ログファイルの設定\n",
-    "log_filename = \"data/logfile.log\"\n",
+    "log_filename = \"data/logfile_attrib_info.log\"\n",
     "logging.basicConfig(\n",
     "    level=logging.INFO,  # ログレベルの設定 (DEBUG, INFO, WARNING, ERROR, CRITICAL)\n",
     "    format=\"%(asctime)s - %(levelname)s - %(message)s\",  # ログのフォーマット\n",
@@ -47,14 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "775e22d3-f10f-4027-8ae7-3085924d9b98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fitz  # PyMuPDF\n",
-    "import pandas as pd\n",
-    "\n",
     "def extract_pdf_attributes(pdf_path, page_number, output_csv_path):\n",
     "    \"\"\"\n",
     "    指定したPDFファイルのブロック・ライン・スパン単位でデータ属性を取得し、CSV形式で出力。\n",
@@ -73,9 +62,9 @@
     "        \n",
     "        # ページ番号が正しいか確認\n",
     "        if page_number < 1 or page_number > len(doc):\n",
-    "            print(f\"エラー: ページ番号は1から{len(doc)}の間で指定してください。\")\n",
-    "            logging.error(f\"エラー: ページ番号は1から{len(doc)}の間で指定してください。\")\n",
-    "            return None\n",
+    "            print(f\"エラー: ページ番号が総ページ数{len(doc)}を超えています。最終ページを対象に処理を進めます。\")\n",
+    "            logging.warning(f\"ページ番号が総ページ数{len(doc)}を超えています。最終ページを対象に処理を進めます。\")\n",
+    "            page_number =　len(doc)\n",
     "        \n",
     "        # 対象ページを取得（0インデックス）\n",
     "        page = doc[page_number - 1]\n",
@@ -145,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a707d3ee-e149-4d63-8fed-4149de57c3c1",
    "metadata": {},
    "outputs": [],
@@ -174,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dac0e5d2-dac7-4ccb-a0ba-361d952c5576",
    "metadata": {},
    "outputs": [],
@@ -208,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "918f384a-b954-44aa-8a64-54e93e98ebc1",
    "metadata": {},
    "outputs": [],
@@ -248,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "e8bc153c-081c-4e35-9c9c-a5379366f9ac",
    "metadata": {},
    "outputs": [
@@ -256,10 +245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==== Processing ir/2025/20020_日清製粉グループ本社/Gx5z.pdf ====\n",
-      "ir/2025/20020_日清製粉グループ本社/Gx5z.pdfの処理が終了しました。\n",
-      "==== Processing ir/2025/22690_明治ホールディングス/integratedreports-integrated_reports_2024_ja_all.pdf ====\n",
-      "ir/2025/22690_明治ホールディングス/integratedreports-integrated_reports_2024_ja_all.pdfの処理が終了しました。\n"
+      "==== Processing ir/2025/40610_デンカ/denkareport2024.pdf ====\n",
+      "ir/2025/40610_デンカ/denkareport2024.pdfの処理が終了しました。\n"
      ]
     }
    ],
@@ -268,7 +255,11 @@
     "\n",
     "def main():\n",
     "    # CSVファイルのパス\n",
-    "    csv_path = 'data/Attrib_Analysis_Target_20250114_test.csv'  # CSVのパスを指定\n",
+    "    #csv_path = 'data/Attrib_Analysis_Target_20250114_test.csv'\n",
+    "    #csv_path = 'data/Attrib_Analysis_Target_20250218.csv'\n",
+    "    #csv_path = 'data/Attrib_Analysis_Target_20250218b.csv'\n",
+    "    csv_path = 'data/Attrib_Analysis_Target_20250219_Denka.csv'  # CSVのパスを指定\n",
+    "    \n",
     "\n",
     "    # CSVを読み込む\n",
     "    df_target = load_csv(csv_path)\n",
@@ -480,6 +471,14 @@
     "\n",
     "#順に企業コード・企業名・PDFファイル名を取り込み\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4fd7347-e978-46d5-a361-0ec9e79e24fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
