--- a/M-col-PDF2TXT_from_list.ipynb
+++ b/M-col-PDF2TXT_from_list.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c4cd8d9c-aaab-4f3d-a76f-5daa21326b9b",
+   "execution_count": 1,
+   "id": "d90842ae-613f-4a4c-add2-3fb2a405ab23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,7 @@
     "sys.path.append('/work_dir') \n",
     "import csv\n",
     "import os\n",
-    "from concurrent.futures import ThreadPoolExecutor, as_completed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77e00df1-dcd5-4462-b2f0-a397861b52c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "import logging\n",
     "\n",
     "# ログファイルの設定\n",
@@ -38,14 +29,43 @@
     "    format=\"%(asctime)s - %(levelname)s - %(message)s\",  # ログのフォーマット\n",
     "    handlers=[\n",
     "        logging.FileHandler(log_filename, mode=\"a\", encoding=\"utf-8\"),  # ファイルに記録\n",
-    "        #logging.StreamHandler()  # コンソールにも出力\n",
+    "        logging.StreamHandler()  # コンソールにも出力\n",
     "    ]\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "4652a1d4-d212-4669-b598-4e93ce554ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CSVを読み込む関数\n",
+    "def load_csv(file_path):\n",
+    "    \"\"\"\n",
+    "    CSVを読み込み、DataFrameを返す\n",
+    "    file_path: CSVファイルのパス\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        return pd.read_csv(file_path)\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: CSV file not found at {file_path}\")\n",
+    "        logging.error(f\"Error: CSV file not found at {file_path}\")\n",
+    "        return None\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(f\"Error: CSV file at {file_path} is empty or invalid\")\n",
+    "        logging.error(f\"Error: CSV file at {file_path} is empty or invalid\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error reading CSV file: {e}\")\n",
+    "        logging.error(f\"Error reading CSV file: {e}\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "21a842c9-2ba1-41ff-83cd-be5560a4ee7c",
    "metadata": {},
    "outputs": [],
@@ -86,7 +106,7 @@
     "    previous_text_type = None\n",
     "\n",
     "    #line_spacing_factorがなければ、とりあえず”2”として処理を進める\n",
-    "    if line_spacing_factor = None:\n",
+    "    if line_spacing_factor == None:\n",
     "            line_spacing_factor = 2\n",
     "    \n",
     "    for range_index in sorted_blocks:\n",
@@ -140,33 +160,29 @@
     "\n",
     "    # 最終的な改行の調整\n",
     "    text = re.sub(r\"\\n{3,}\", \"\\n\\n\", text).strip()\n",
-    "    return text\n",
-    "\n"
+    "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "275688e7-516e-4643-b87d-549ee18c539e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "header_y: 25.98\n",
-      "footer_y: 651.85\n",
-      "left_margin_x: None\n",
-      "right_margin_x: None\n",
-      "[585.0, 1070.0]\n",
-      "ファイルが保存されました: ir/2025/40040_レゾナック・ホールディングス/pdf-sustainability-report-integratedreport-RESONAC24J_spread.txt\n"
+      "2025-02-19 15:56:32,816 - INFO - ==== Processing ir/2025/40610_デンカ/denkareport2024.pdf ====\n",
+      "2025-02-19 15:56:41,164 - INFO - File 'ir/2025/40610_デンカ/denkareport2024.txt' was saved.\n"
      ]
     }
    ],
    "source": [
     "def main():\n",
     "    # CSVファイルのパス\n",
-    "    csv_path = 'data/Attrib_Analysis_Target_20250114_test.csv'  # CSVのパスを指定\n",
+    "    #csv_path = 'data/Attrib_Analysis_Target_20250114_test.csv'  # CSVのパスを指定\n",
+    "    csv_path = 'data/Attrib_Analysis_Target_20250219_Denka.csv'  # CSVのパスを指定\n",
     "\n",
     "    # 統合報告書がリストされたCSVを読み込む\n",
     "    df_target = load_csv(csv_path)\n",
@@ -179,130 +195,114 @@
     "    folder_col = '格納フォルダ'\n",
     "    file_col = '統合報告書PDF'\n",
     "    #target_col = 'target_page'\n",
-    "    line_spacing_factor = '行間設定'\n",
+    "    line_spacing_factor_col = '行間設定'\n",
     "\n",
     "    # CSVに必要な列がなければエラー表示\n",
     "    if folder_col not in df_target.columns or file_col not in df_target.columns not in df_target.columns:\n",
     "        #print(f\"Error: CSV file must contain '{folder_col}' and '{file_col}' columns\")\n",
     "        logging.error(f\"Error: CSV file must contain '{folder_col}' and '{file_col}' columns\")\n",
     "        return\n",
-    "  \n",
     "\n",
-    "    # リストの企業ごとに、ターゲットページ（のみ）の属性情報を取得・処理・保存\n",
+    "    # リストの企業ごとに、pdfのテキストデータを取得・保存\n",
     "    #file_paths = []\n",
     "    for index, row in df_target.iterrows():\n",
     "\n",
+    "        #================================================================\n",
+    "        #前処理（フォルダの確認・パス名の定義　等）\n",
+    "        folder_name = 'ir/2025/' + row[folder_col]\n",
+    "        file_name = row[file_col]\n",
+    "        line_spacing_factor = row[line_spacing_factor_col]\n",
     "\n",
+    "        info_file_path = folder_name + '/' + 'info'\n",
+    "        pdf_path = folder_name + \"/\" + file_name\n",
+    "        margin_path = info_file_path  + \"/\" + \"margin.csv\"\n",
+    "        multicolumn_path = info_file_path  + \"/\" + \"multicolumn.txt\"\n",
     "\n",
+    "        # パスが有効かチェック\n",
+    "        if pd.isna(folder_name) or pd.isna(file_name):\n",
+    "            print(f\"Skipping row {index}: Folder or File is missing\")\n",
+    "            logging.warning(f\"Skipping row {index}: Folder or File is missing\")\n",
+    "            file_path =''\n",
+    "            return\n",
+    "        #属性情報を格納するフォルダ（info）の有無を確認\n",
+    "        if not os.path.exists(info_file_path):\n",
+    "            logging.warning(f\"Skipping row {index}: No info Folder\")\n",
+    "            return\n",
+    "\n",
+    "        #print(f\"==== Processing {folder_name}/{file_name} ====\")\n",
+    "        logging.info(f\"==== Processing {folder_name}/{file_name} ====\")\n",
+    "\n",
+    "        # フィルタリング範囲の指定（適宜調整）\n",
+    "        # 初期化 (ファイルが存在しない場合もNoneになるようにする)\n",
+    "        header_y = None\n",
+    "        footer_y = None\n",
+    "        left_margin_x = None\n",
+    "        right_margin_x = None\n",
+    "\n",
+    "        try:\n",
+    "            # margin.csvの読み込み\n",
+    "            df_margin = pd.read_csv(margin_path)\n",
+    "            \n",
+    "            # 変数への値の格納 (ブランクの場合はNoneに)\n",
+    "            header_y = df_margin.iloc[0]['header_y'] if 'header_y' in df_margin.columns and pd.notnull(df_margin.iloc[0]['header_y']) else None\n",
+    "            footer_y = df_margin.iloc[0]['footer_y'] if 'footer_y' in df_margin.columns and pd.notnull(df_margin.iloc[0]['footer_y']) else None\n",
+    "            left_margin_x = df_margin.iloc[0]['left_margin_x'] if 'left_margin_x' in df_margin.columns and pd.notnull(df_margin.iloc[0]['left_margin_x']) else None\n",
+    "            right_margin_x = df_margin.iloc[0]['right_margin_x'] if 'right_margin_x' in df_margin.columns and pd.notnull(df_margin.iloc[0]['right_margin_x']) else None\n",
     "        \n",
+    "        except FileNotFoundError:\n",
+    "            # ファイルが存在しない場合、全ての変数をNoneのままにする\n",
+    "            logging.warning(f\"File 'margin.csv' is missing, default values were applied.\")\n",
+    "            pass\n",
     "    \n",
-    "    \n",
-    "    # PDFファイルのパス\n",
-    "    base_dir = \"ir/2025/\"\n",
-    "    #base_dir = \"ir/2024/\"\n",
-    "    #pdf_dir =  \"34070_旭化成\"\n",
-    "    #pdf_filename = \"24jp.pdf\"\n",
-    "    #pdf_dir =  '41880_三菱ケミカルグループ'\n",
-    "    #pdf_filename = \"23.pdf\"\n",
-    "    pdf_dir =  '40040_レゾナック・ホールディングス'\n",
-    "    pdf_filename = 'pdf-sustainability-report-integratedreport-RESONAC24J_spread.pdf'\n",
-    "    \n",
-    "    pdf_path = base_dir + pdf_dir + \"/\" + pdf_filename\n",
-    "    info_path = base_dir + pdf_dir + \"/info/\"\n",
-    "    \n",
-    "    margin_path = info_path + \"margin.csv\"\n",
-    "    multicolumn_path = info_path + \"multicolumn.txt\"\n",
-    "    \n",
-    "    # フィルタリング範囲の指定（適宜調整）\n",
-    "    # 初期化 (ファイルが存在しない場合もNoneになるようにする)\n",
-    "    header_y = None\n",
-    "    footer_y = None\n",
-    "    left_margin_x = None\n",
-    "    right_margin_x = None\n",
-    "    #旭化成\n",
-    "    #header_y = 37  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
-    "    #footer_y = None  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
-    "    #left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
-    "    #right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
-    "    \n",
-    "    #三菱ケミカル\n",
-    "    #header_y = 24  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
-    "    #footer_y = 652  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
-    "    #left_margin_x = 174  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
-    "    #right_margin_x = 997  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
-    "    \n",
-    "    #レゾナック\n",
-    "    #header_y = 26  # ヘッダ除外のbbox_y1閾値（ヘッダ範囲内の最大値）\n",
-    "    #footer_y = 651  # フッタ除外のbbox_y0閾値（フッタ範囲内の最小値）\n",
-    "    #left_margin_x = None  # 左マージン除外のbbox_x1閾値（範囲内の最大値）\n",
-    "    #right_margin_x = None  # 右マージン除外のbbox_x0閾値（範囲内の最小値）\n",
-    "    \n",
-    "    try:\n",
-    "        # margin.csvの読み込み\n",
-    "        df_margin = pd.read_csv(margin_path)\n",
+    "        # 結果を確認\n",
+    "        #print(f\"header_y: {header_y}\")\n",
+    "        #print(f\"footer_y: {footer_y}\")\n",
+    "        #print(f\"left_margin_x: {left_margin_x}\")\n",
+    "        #print(f\"right_margin_x: {right_margin_x}\")\n",
     "        \n",
-    "        # 変数への値の格納 (ブランクの場合はNoneに)\n",
-    "        header_y = df_margin.iloc[0]['header_y'] if 'header_y' in df_margin.columns and pd.notnull(df_margin.iloc[0]['header_y']) else None\n",
-    "        footer_y = df_margin.iloc[0]['footer_y'] if 'footer_y' in df_margin.columns and pd.notnull(df_margin.iloc[0]['footer_y']) else None\n",
-    "        left_margin_x = df_margin.iloc[0]['left_margin_x'] if 'left_margin_x' in df_margin.columns and pd.notnull(df_margin.iloc[0]['left_margin_x']) else None\n",
-    "        right_margin_x = df_margin.iloc[0]['right_margin_x'] if 'right_margin_x' in df_margin.columns and pd.notnull(df_margin.iloc[0]['right_margin_x']) else None\n",
-    "    \n",
-    "    except FileNotFoundError:\n",
-    "        # ファイルが存在しない場合、全ての変数をNoneのままにする\n",
-    "        pass\n",
-    "    \n",
-    "    # 結果を確認\n",
-    "    print(f\"header_y: {header_y}\")\n",
-    "    print(f\"footer_y: {footer_y}\")\n",
-    "    print(f\"left_margin_x: {left_margin_x}\")\n",
-    "    print(f\"right_margin_x: {right_margin_x}\")\n",
-    "    \n",
-    "    #段組み情報を設定\n",
-    "    # 段組みの閾値を x0 で設定\n",
-    "    column_thresholds = []  \n",
-    "    try:\n",
-    "        # ファイルを開いて読み込む\n",
-    "        with open(multicolumn_path, 'r', encoding='utf-8-sig') as mc_file:\n",
-    "            for line in mc_file:\n",
-    "                # 各行をカンマで分割し、数値に変換してリストに格納\n",
-    "                column_thresholds.extend([float(value) for value in line.strip().split(',') if value])\n",
-    "    except FileNotFoundError:\n",
-    "        pass\n",
-    "    except ValueError:\n",
-    "        print(\"multicolumn.txtに数値以外のデータが含まれています。\")\n",
-    "    \n",
-    "    # 読み込んだ段組み閾値情報を確認\n",
-    "    print(column_thresholds)\n",
-    "    \n",
-    "    #レゾナック\n",
-    "    #column_thresholds =[585, 1070]\n",
-    "    #column_thresholds =[281, 585, 828, 1070]\n",
-    "    \n",
-    "    # PDFファイルのオープン\n",
-    "    doc = fitz.open(pdf_path)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # PDFからテキストを抽出し、クリーニング\n",
-    "    cleaned_text = \"\"\n",
-    "    \n",
-    "    for page_number, page in enumerate(doc, start=0):\n",
-    "        # ページ開始タグ\n",
-    "        cleaned_text += f\"<page {page_number}>\\n\"\n",
-    "        # ページ内容（新しいx0_rangesによる処理）\n",
-    "        cleaned_text += clean_text_by_attributes(page, header_y, footer_y, left_margin_x, right_margin_x, column_thresholds) + \"\\n\"\n",
-    "        # ページ終了タグ\n",
-    "        cleaned_text += f\"</page {page_number}>\\n\\n\"\n",
-    "    \n",
-    "    # 出力ファイルパス\n",
-    "    output_file_path = pdf_path[:len(pdf_path)-4] + \".txt\"\n",
-    "    \n",
-    "    # ファイルへの書き込み\n",
-    "    with open(output_file_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "        f.write(cleaned_text)\n",
-    "    \n",
-    "    print(f\"ファイルが保存されました: {output_file_path}\")\n",
+    "        #段組み情報を設定\n",
+    "        # 段組みの閾値を x0 で設定\n",
+    "        column_thresholds = []  \n",
+    "        try:\n",
+    "            # ファイルを開いて読み込む\n",
+    "            with open(multicolumn_path, 'r', encoding='utf-8-sig') as mc_file:\n",
+    "                for line in mc_file:\n",
+    "                    # 各行をカンマで分割し、数値に変換してリストに格納\n",
+    "                    column_thresholds.extend([float(value) for value in line.strip().split(',') if value])\n",
+    "        except FileNotFoundError:\n",
+    "            logging.warning(f\"File 'multicolumn.txt' is missing.\")\n",
+    "            pass\n",
     "\n",
+    "        except ValueError:\n",
+    "            logging.warning(f\"File 'multicolumn.txt' includes non-value data.\")\n",
+    "            pass\n",
+    "        \n",
+    "        # 読み込んだ段組み閾値情報を確認\n",
+    "        #print(column_thresholds)\n",
+    "    \n",
+    "        # PDFファイルのオープン\n",
+    "        doc = fitz.open(pdf_path)\n",
+    "        \n",
+    "        # PDFからテキストを抽出し、クリーニング\n",
+    "        cleaned_text = \"\"\n",
+    "        \n",
+    "        for page_number, page in enumerate(doc, start=0):\n",
+    "            # ページ開始タグ\n",
+    "            cleaned_text += f\"<page {page_number}>\\n\"\n",
+    "            # ページ内容（新しいx0_rangesによる処理）\n",
+    "            cleaned_text += clean_text_by_attributes(page, header_y, footer_y, left_margin_x, right_margin_x, column_thresholds, line_spacing_factor) + \"\\n\"\n",
+    "            # ページ終了タグ\n",
+    "            cleaned_text += f\"</page {page_number}>\\n\\n\"\n",
+    "        \n",
+    "        # 出力ファイルパス\n",
+    "        output_file_path = pdf_path[:len(pdf_path)-4] + \".txt\"\n",
+    "        \n",
+    "        # ファイルへの書き込み\n",
+    "        with open(output_file_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "            f.write(cleaned_text)\n",
+    "        \n",
+    "        logging.info(f\"File '{output_file_path}' was saved.\")\n",
+    "        #print(f\"File '{output_file_path}' was saved.\")\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
